--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <h1> Welcome to</h1>
     <h1> <span class="name-highlight">Missiom</span> World</h1>
-    <h3>World class Web developer</h3>
+    <h3>World class Web developer & Lead Marker</h3>
+    <p>Hello! I am Alnur Khan Missiom.I am a hard-working, reliable web developer & lead Marketer. I love my profession and i work my works very carefully.I will be much satisfied with my work, if it brings happiness and fortune in others life.i am specially cool minded .Do you need a high-quality lead marketer or web developer please CONTCT ME </p>
   
 </body>
 </html>
