second section completed

--- a/index.html
+++ b/index.html
@@ -15,10 +15,23 @@
         <h1> <span class="name-highlight">Missiom</span> World</h1>
         <h3>World class Web developer & Lead Marker</h3>
         <p>Hello! I am Alnur Khan Missiom.I am a hard-working, reliable web developer & lead Marketer. I love my profession and i work my works very carefully.I will be much satisfied with my work, if it brings happiness and fortune in others life.i am specially cool minded .Do you need a high-quality lead marketer or web developer please CONTCT ME </p>
+        <a class="link-button" target= "_blank" href="https://www.fiverr.com/alnur373">HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="images/profile1.png" alt="Images">
     </div>
+    </section>
+    <section>
+        <div class="half-width">
+            <img src="images/profile2.png" alt="Images">
+        </div>
+        <div class="half-width">         
+            <h2>Big Dream</h2>
+            <h3>Become an Pro Bug Bounty Hunter</h3>
+            <p>I am already learned the basic part of Ethical Hacking. And Now i am learning intermediate  level Bug Bounty hunting. and i am on Intership in Data Space Security Ltd.  </p>
+            <p>In Future I want te be a pro bug bunty hunter. And i have a big dream i am work with facebook, google, microsoft as a bug bounty hunter</p>
+            <a class="link-button" target= "_blank" href="https://www.fiverr.com/alnur373">Download Resume</a>
+        </div>
     </section>
 </body>
 </html>
