something is missiong

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+      <!--Section 1 Hire Me-->
     <section class="top-banner">
     <div class="half-width">         
         <h1> Welcome to</h1>
-        <h1> <span class="name-highlight">Missiom</span> World</h1>
+        <h1> <span class="orange-highlight">Missiom</span> World</h1>
         <h3>World class Web developer & Lead Marker</h3>
         <p>Hello! I am Alnur Khan Missiom.I am a hard-working, reliable web developer & lead Marketer. I love my profession and i work my works very carefully.I will be much satisfied with my work, if it brings happiness and fortune in others life.i am specially cool minded .Do you need a high-quality lead marketer or web developer please CONTCT ME </p>
         <a class="link-button" target= "_blank" href="https://www.fiverr.com/alnur373">HIRE ME</a>
@@ -21,17 +22,33 @@
         <img src="images/profile1.png" alt="Images">
     </div>
     </section>
-    <section>
+      <!--Section  Dream -->
+    <section class="dream-area">
+        
         <div class="half-width">
             <img src="images/profile2.png" alt="Images">
         </div>
-        <div class="half-width">         
+        <div id="half-width">         
             <h2>Big Dream</h2>
             <h3>Become an Pro Bug Bounty Hunter</h3>
             <p>I am already learned the basic part of Ethical Hacking. And Now i am learning intermediate  level Bug Bounty hunting. and i am on Intership in Data Space Security Ltd.  </p>
             <p>In Future I want te be a pro bug bunty hunter. And i have a big dream i am work with facebook, google, microsoft as a bug bounty hunter</p>
-            <a class="link-button" target= "_blank" href="https://www.fiverr.com/alnur373">Download Resume</a>
+            <a class="link-button" target= "_blank" href="#">Download Resume</a>
         </div>
+    </section>
+    <!--Section 3 Experience -->
+    <section class="experience-area">
+        <h2 id="experience-highlight">Experiences</h2>
+       <div class="half-width single-experience">
+         <h2>Lear Generator</h2>
+         <h3 class="orange-highlight">2021-Present | Pro Level Lead Generator</h3>
+         <p>I am started My lead Marketing Journery and Now i am a pro level lead Generator. Now I am work with Abridge It Firm Agency in Lead generation. And I am work on fiverr in lead generation  </p>
+       </div>
+       <div class="half-width single-experience">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-highlight">2020-Present | Pro Level Developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.  </p>
+      </div>
     </section>
 </body>
 </html>
