--- a/index.html
+++ b/index.html
@@ -39,16 +39,20 @@
     <!--Section 3 Experience -->
     <section class="experience-area">
         <h2 id="experience-highlight">Experiences</h2>
-       <div class="half-width single-experience">
+       <div id="lead-generator" class="half-width single-experience">
          <h2>Lear Generator</h2>
          <h3 class="orange-highlight">2021-Present | Pro Level Lead Generator</h3>
          <p>I am started My lead Marketing Journery and Now i am a pro level lead Generator. Now I am work with Abridge It Firm Agency in Lead generation. And I am work on fiverr in lead generation  </p>
        </div>
-       <div class="half-width single-experience">
+       <div id="full-stak"class="half-width single-experience">
         <h2>Full Stack Web Developer</h2>
         <h3 class="orange-highlight">2020-Present | Pro Level Developer</h3>
         <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.  </p>
       </div>
     </section>
+</section>
+<footer>
+    <p> Alnur Khan Missiom, © all right reserved.</p>
+</footer>
 </body>
 </html>
